2012-10-25  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/sparc/sparc64/get_clockfreq.c
	(__get_clockfreq_via_proc_openprom): Use strtoumax instead
	of strtoull.

	* sysdeps/sparc/sparc64/multiarch/memcpy.S: Add comments for
	ifunc-impl-list.c
	* sysdeps/sparc/sparc64/multiarch/memset.S: Likewise.
	* sysdeps/sparc/sparc64/multiarch/ifunc-impl-list.c: New file.
	* sysdeps/sparc/sparc32/sparcv9/multiarch/ifunc-impl-list.c: New
	file.

2012-10-25  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/get_clockfreq.c
	(__get_clockfreq_via_proc_openprom): Use __getdents instead of
	__getdirentries.

2012-10-25  Joseph Myers  <joseph@codesourcery.com>
	    Jim Blandy  <jimb@codesourcery.com>

	* scripts/cross-test-ssh.sh: New file.
	* manual/install.texi (Configuring and compiling): Document use of
	cross-test-ssh.sh.
	* INSTALL: Regenerated.

2012-10-25  Pino Toscano  <toscano.pino@tiscali.it>

	* sysdeps/mach/hurd/ptrace.c (ptrace): Use __hurd_fail to return
	EOPNOTSUPP.

2012-10-25  Joseph Myers  <joseph@codesourcery.com>

	* Makeconfig (run-program-prefix): Fix comment.

2012-10-24  Joseph Myers  <joseph@codesourcery.com>
	    Jim Blandy  <jimb@codesourcery.com>

	* Makeconfig (test-wrapper): New variable,
	(test-wrapper-env): Likewise.
	[$(cross-compiling) = yes && $(test-wrapper) != ""]
	(run-built-tests): Define to yes.
	(run-program-prefix): Use $(test-wrapper).
	(built-program-cmd): Likewise.
	* Rules (make-test-out): Use $(test-wrapper-env) and
	$(host-built-program-cmd).
	* elf/Makefile ($(objpfx)order.out): Use $(test-wrapper).
	($(objpfx)tst-pathopt.out): Pass $(test-wrapper-env) to
	tst-pathopt.sh.
	($(objpfx)tst-rtld-load-self.out): Pass $(test-wrapper) and
	$(test-wrapper-env) to tst-rtld-load-self.sh.
	($(objpfx)order2.out): Use $(test-wrapper).
	($(objpfx)tst-initorder.out): Likewise.
	($(objpfx)tst-initorder2.out): Likewise.
	($(objpfx)tst-unused-dep.out): Use $(test-wrapper-env).