@@ -262,7 +262,7 @@ while read charset charmap; do
   if test "$charset" = GB18030; then echo "This might take a while" 1>&2; fi
   case ${charset} in \#*) continue;; esac
   echo -n "Testing ${charset}" 1>&2
-  if ${SHELL} tst-table.sh ${common_objpfx} ${objpfx} "${run_program_prefix}" \
+  if ./tst-table.sh ${common_objpfx} ${objpfx} "${run_program_prefix}" \
       ${charset} ${charmap} < /dev/null; then
     echo 1>&2
   else
