@@ -105,5 +105,6 @@ out:
   return ret;
 }
 
+#define TEST_FUNCTION do_test ()
 #define TIMEOUT 5
 #include "../test-skeleton.c"
