@@ -1,3 +1,7 @@
+2012-10-25  Roland McGrath  <roland@hack.frob.com>
+
+	* tst-cond-except.c (TEST_FUNCTION): New macro.
+
 2012-10-25  Joseph Myers  <joseph@codesourcery.com>
 
 	* Makefile ($(objpfx)tst-tls6.out): Use $(BASH) not $(SHELL) to
